--- a/doc/styles.css
+++ b/doc/styles.css
@@ -60,6 +60,26 @@ ul.clean
 {
 	list-style-type: none;
 }
+
+img
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+	text-align: center;
+}
+
+div.tooltip
+{
+	display : none;
+	position: absolute;
+	width   : 250;
+	border  : 1px solid #ffcc00;
+	padding : 5px;
+	border-radius: 5px;
+	background-color: #ffffcc;
+}
+
 /*
 a
 {
