--- a/doc/styles.css
+++ b/doc/styles.css
@@ -93,11 +93,10 @@ li.page
 
 a
 {
-	text-decoration:none;
+	text-decoration: none;
 }
-/*
-a
+
+a:hover
 {
-	color: #008000;
+	text-decoration: underline;
 }
-*/
